# NewLang

./: Cargo.toml  README.md  core.lang  main.lang  out.txt  test.lang
src/: ast.rs  idvec.rs  inferring.rs  inferring_tree.rs  interpreting.rs  ir.rs  lexer.rs  lexing.rs  lib.rs  location.rs  main.rs  nodes.rs  parsing.rs  resolving.rs  semantic_analysis.rs  syntax_tree.rs  to_ir.rs  treewalk_interpreter.rs  type_checker.rs  type_checking.rs  type_inference_tree.rs  typed_tree.rs  types.rs  typing.rs  validating.rs
